tests/checker/ok/bool_dispatch.can
main = () => Unit {
    True().(
        * (False) => Unit { "no".print() }
        * (True) => Unit { "yes".print() }
    )
}
