tests/checker/fail/union_dispatch_unsorted.can
Unit => Program {
    True() -> (
        * True => Unit { "yes" -> Print }
        * False => Unit { "no" -> Print }
    )
}
